Fixed access to resource files in Model package